modified project descriptions for isu projects in portfolio page

--- a/content/top/portfolio.html
+++ b/content/top/portfolio.html
@@ -59,7 +59,9 @@ Financial Aid App
 🎫R 🎫Web App 🎫ML<br />
 
 <p class="card-text">
-A web application built using <code>Shiny</code>, an R package, to help financial aid administrators decide non-federal financial aid allocation for students. This app uses <code>Extreme Gradient Boosting</code> behind the scene to predict students’ enrollment probability. This app helps the administrators allocate $200,000 as financial aid among approximately 3,000 students enrolled each year.
+<p>One of the challenges of allocating non-federal financial aid is to make sure the aid goes to the right candidates: candidates who need the money, and who would actually choose to come if they get the extra money.</p>
+<p>This financial aid application helps the aid administrators decide whom to award the aid and how much. It uses a Machine Learning model (<code>Extreme Gradient Boosting</code>) to calculate the probability of enrollment for each admitted student. It allows the users to target a specific segment of students, vary aid allocation amount, and recalculate probability to see the possible effect of aid amount on their enrollment probability.</p>
+<p>Currently, this app helps the administrators allocate $200,000 as financial aid among approximately 3,000 students enrolled each year.</p>
 </p>
 </div>
 <p><img class="proj-img" src="/img/Finaid_App_Diagram03.png" alt="Card image cap"></p>
@@ -75,7 +77,8 @@ Retention Prediction
 </h4>
 🎫Python 🎫Machine Learning 🎫Data Analysis
 <p class="card-text">
-Predictive model to calculate probability of whether an enrolled student will stay after the end of the Freshman year. There are in total 5 predictive models that run at different cut-off times to update predictions as the students progress through the semester and new information is gathered. Together these models help student advisers target students, and design interventions more specifically.
+<p>Drop out of undergraduate students after Freshman year is one of the biggest challenges for the universities, especially for the small and medium-sized ones. And limited resources make it impossible to design blanket intervention measures.</p>
+Machine Learning models are used to pre-emptively target students for intervention and make the intervention initiatives more efficient and targeted. Total five predictive models are run at different cut-off times to update the retention predictions as the students progress through the semester, and we learn more about the student.
 </p>
 </div>
 </div>
